add_subdirectory(algorithm_binary_search)
add_subdirectory(algorithm_sorts)
add_subdirectory(pattern_observer)
add_subdirectory(pattern_strategy)
add_subdirectory(pattern_adapter)
add_subdirectory(pattern_visitor)
add_subdirectory(pattern_singleton)
add_subdirectory(pattern_factory_method)
add_subdirectory(pattern_abstract_factory)
add_subdirectory(pattern_builder)
add_subdirectory(pattern_prototype)
add_subdirectory(pattern_bridge)
add_subdirectory(problem_diamond_problem)
add_subdirectory(problem_polymorphism)
add_subdirectory(test_field)